--- a/lab1/app-root/public/index.html
+++ b/lab1/app-root/public/index.html
@@ -56,14 +56,14 @@
     	<article class="well">
 		<h4>Лабораторна робота №2</h4> 
         <p>Короткий опис завдання</p>
-        <p><a href="#">Посилання на репозиторій</a></p> 
+        <p><a href="#">https://github.com/stavetskiy/front-end/tree/main/lab2</a></p> 
         </article>
   	</div>
     <div class="col-sm-4">
     	<article class="well">
 		<h4>Лабораторна робота №3</h4> 
         <p>Короткий опис завдання</p>
-        <p><a href="#">Посилання на репозиторій</a></p> 
+        <p><a href="#">https://github.com/stavetskiy/front-end/tree/main/lab3/webpack-project</a></p> 
         </article>
   	</div>
   </div>
